# TurboHiker

./: CMakeLists.txt  README.md  index.html  run.sh
Resources/: Scoreboard.txt
SFML-2.5.1/: CMakeLists.txt
SFML-2.5.1/APPLE/SFML-2.5.1-MAC/src/SFML/Window/Unix/: ClipboardImpl.hpp
doc/: Doxygen
doc/html/: doxygen.css  index.html  menudata.js
doc/html/search/: search.css  searchdata.js
doc/latex/: refman.tex
src/: Game.cpp  Game.h  main.cpp
src/Exceptions/: MissingFile.cpp  MissingFile.h  MyException.cpp  MyException.h  NullptrException.cpp  NullptrException.h
src/Logic/Entities/: Entity.cpp  Entity.h
src/Logic/Entities/Dynamic/: DynamicEntity.cpp  DynamicEntity.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/Logic/Entities/Static/: Camera.cpp  Camera.h  Finish.cpp  Finish.h  Lane.cpp  Lane.h  Score.cpp  Score.h  World.cpp  World.h
src/Logic/Factories/: AbstractFactory.h
src/Observer/: Observable.cpp  Observable.h  Observer.cpp  Observer.h
src/Representation/Entities/: Entity.cpp  Entity.h
src/Representation/Entities/Dynamic/: Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/Representation/Entities/Static/: Camera.cpp  Camera.h  Finish.cpp  Finish.h  Lane.cpp  Lane.h
src/Representation/Factories/: AbstractFactory.cpp  AbstractFactory.h
src/Singletons/: RandomNumberGenerator.cpp  RandomNumberGenerator.h  StopWatch.cpp  StopWatch.h  Transformation.cpp  Transformation.h
src/Utils/: CONST.h  Enum.h
src/Utils/SFML_Extras/: Button.cpp  Button.h  Object.cpp  Object.h  Slider.cpp  Slider.h  Textbox.cpp  Textbox.h
